--- a/trunk/tp/implementación/README
+++ b/trunk/tp/implementación/README
@@ -8,10 +8,10 @@ Instrucciones de instalacion
 	$ cd [ruta_instalacion]
 	$ tar -xvfz tp-grupo01.tgz
 4. Dele permisos al instalador instalarC.sh:
-	$ vf tp-grupo01
+	$ cd tp-grupo01
 	$ chmod u+rx instalarC.sh
 5. Ejecute el instalador:
-	$ . instalarC.sh
+	$ ./instalarC.sh
 
 En este punto el programa ya esta instalado y listo para usar.
 
@@ -19,6 +19,6 @@ Inicializacion
 --------------
 
 Una vez instalado, acceda a la carpeta en la que instalo Consultar y ejecute el comando iniciarC.sh:
-	$ ./iniciarC.sh
+	$ . iniciarC.sh
 
 Esto inicializara el entorno para poder utilizar los demas comandos, y dejara corriendo el daemon detectarC, de manera que puede ir copiando las encuestas en la carpeta de arribos seleccionada cuando instalo el programa.
