--- a/trunk/tp/implementación/README
+++ b/trunk/tp/implementación/README
@@ -18,7 +18,7 @@ En este punto el programa ya esta instalado y listo para usar.
 Inicializacion
 --------------
 
-Una vez instalado, acceda a la carpeta en la que instalo Consultar y ejecute el comando iniciarC.sh:
+Una vez instalado, acceda a la carpeta en la que instalo los ejecutables de Consultar y ejecute el comando iniciarC.sh:
 	$ . iniciarC.sh
 
 Esto inicializara el entorno para poder utilizar los demas comandos, y dejara corriendo el daemon detectarC, de manera que puede ir copiando las encuestas en la carpeta de arribos seleccionada cuando instalo el programa.
