--- a/tp/implementación/README
+++ b/tp/implementación/README
@@ -6,7 +6,7 @@ Instrucciones de instalacion
 	$ cp [ruta_paquete]/tp-grupo01.tgz [ruta_instalacion]
 3. Vaya a la carpeta de instalacion y extraiga el contenido del paquete de instalacion:
 	$ cd [ruta_instalacion]
-	$ tar -xvfz tp-grupo01.tgz
+	$ tar -xvf tp-grupo01.tgz
 4. Dele permisos al instalador instalarC.sh:
 	$ cd tp-grupo01
 	$ chmod u+rx instalarC.sh
@@ -22,3 +22,10 @@ Una vez instalado, acceda a la carpeta en la que instalo los ejecutables de Cons
 	$ . iniciarC.sh
 
 Esto inicializara el entorno para poder utilizar los demas comandos, y dejara corriendo el daemon detectarC, de manera que puede ir copiando las encuestas en la carpeta de arribos seleccionada cuando instalo el programa.
+
+Finalizacion
+------------
+
+Para detener el programa, ejecute en la terminal, desde el directorio lib de Consultar:
+	$ ./StopD.sh
+
